2005-03-12  0.8.1.55  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, added gnocatan.spec.in, removed gnocatan.spec: The
	spec is automatically generated and uses the current version.
	
2005-03-02  0.8.1.54  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: Reversal of the patch in 0.8.1.48, because
	it would set the client to the state turn when performing a maritime
	trade. Added a reset of the have_turn flag when game over is reached.

2005-03-02  Brian Wellington <bwelling@users.sourceforge.net>
	* client/gtk/interface.c: Disable the reject button when the trade was
	already rejected.

2005-02-05  0.8.1.53  Roland Clobus <rclobus@bigfoot.com>
	* server/gnocatan-server.c, meta-server/gnocatan-meta-server.c: Forgot
	the NULL termination of g_build_filename, pointed out by Brian
	Wellington.

2005-02-05  Brian Wellington <bwelling@users.sourceforge.net>
	* gnocatan.spec: Updated to version 0.8.1

2005-02-03  0.8.1.52  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c, server/gtk/gnocatan-server-gtk.c: Fix for crash in
	about dialog. Also reintroduces the version number.
	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/guimap.h,
	client/gtk/theme.c, client/gtk/theme.h,
	server/gtk/gnocatan-server-gtk.c: Theme.c rewrite, using
	g_build_filename instead of gnome_program_locate_file.
	* client/gtk/trade.c: Fixed a memory leak.
	* common/game.c, common/game.h, common/map.c,
	server/gnocatan-server.c, server/gnocatan-server.h: Server will not
	crash on invalid/unreadable games.
	* configure.ac, rules.make,
	client/gtk/connect.c, client/help/C/gnocatan.xml,
	client/help/C/images/connect-dialog.png,
	client/help/C/images/server-create.png,
	client/help/C/images/server-create.png,
	client/help/C/images/servers-dialog.png,
	meta-server/gnocatan-meta-server.c: Meta server protocol updated to
	1.1. New keyword: capability. When 'create games' is sent, the
	metaserver is capable of locally creating new game. Updated the